--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content=" width=device-width,initial-scale=1">
     <link rel="stylesheet" href="index.css">
-    <title>CardView</title>
+    <title>CardViews</title>
   </head>
   <body>
-      <h1>Resume Builder</h1>
+      <h1>Resume Builders</h1>
 
       <div class="flex-container" id="main">
 
